--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "express": "^5.1.0",
     "googleapis": "^157.0.0",
     "groq-sdk": "^0.30.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.542.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
+    "react-router-dom": "^7.8.2",
     "resend": "^6.0.1"
   },
   "devDependencies": {
