--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server",
-    "client": "npm --prefix client start"
+    "client": "npm --prefix client start",
+    "start":"node index"
   },
   "author": "Desireddy Lakshmi Prasanna",
   "license": "ISC",
